--- a/docs/assets/AssetManifest.json
+++ b/docs/assets/AssetManifest.json
@@ -1,1 +1,1 @@
-{"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"]}
+{"assets/main_foto.jpg":["assets/main_foto.jpg"],"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"],"packages/unicons/icons/UniconsLine.ttf":["packages/unicons/icons/UniconsLine.ttf"],"packages/unicons/icons/UniconsSolid.ttf":["packages/unicons/icons/UniconsSolid.ttf"],"packages/unicons/icons/UniconsThinline.ttf":["packages/unicons/icons/UniconsThinline.ttf"]}
